--- a/SourceCode/package.json
+++ b/SourceCode/package.json
@@ -13,6 +13,8 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "express": "^4.16.4",
-    "mongodb": "^3.1.8"
+    "mongodb": "^3.1.8",
+    "nodemailer": "^4.7.0",
+    "xoauth2": "^1.2.0"
   }
 }
